--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "gulp-jshint": "^2.0.4",
     "gulp-minify-css": "^1.2.2",
     "gulp-ruby-sass": "^2.1.1",
-    "gulp-sass": "^2.1.1",
-    "jshint": "^2.9.5"
+    "gulp-sass": "^2.1.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.13",
+    "browser-sync": "^2.26.7",
     "del": "^3.0.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cache": "^1.0.1",
@@ -34,6 +33,6 @@
     "gulp-ruby-sass": "^2.1.1",
     "gulp-uglify": "^3.0.0",
     "jquery": "~1.11.1",
-    "jshint": "^2.9.5"
+    "jshint": "^2.10.2"
   }
 }
