Změny na webu 2020 - spolecna fotka, aktualizace absolventu

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 node_modules
 .sass-cache
+.idea/.gitignore
+.idea/misc.xml
+.idea/mobileacademy.iml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/jsLinters/jshint.xml
